	* src/GrampsDbUtils/_GrampsDbWRFactories.py: refactor GrampsDb and clean RelLib deps
	* src/BasicUtils.py: refactor GrampsDb and clean RelLib deps
	* src/ArgHandler.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsLocale.py: refactor GrampsDb and clean RelLib deps
	* src/DbLoader.py: refactor GrampsDb and clean RelLib deps
	
2007-02-02  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/WriteCD.py: Properly encode URI.

2007-02-02  Don Allingham  <don@gramps-project.org>
	* FAQ: update a bit.

2007-02-01  Piotr Czubaszek  <pioterus@gmail.com>
	* src/plugins/rel_pl.py: Update.

2007-02-01  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/ChangeNames.py: Typo.

2007-01-30  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/ODFDoc.py: add start_superscript and stop_superscript
	* src/docgen/KwordDoc.py: add start_superscript and stop_superscript
	* src/docgen/RTFDoc.py: add start_superscript and stop_superscript
	* src/docgen/HtmlDoc.py: add start_superscript and stop_superscript
	* src/docgen/OpenOfficeDoc.py: add start_superscript and stop_superscript
	* src/docgen/LaTeXDoc.py: add start_superscript and stop_superscript
	* src/plugins/IndivComplete.py: fix source citations (0000867)
	* src/ReportBase.py: fix source citations (0000867)

2007-01-30  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: use new delete function
	* src/GrampsDb/_DbUtils.py: add person delete function
	* src/Editors/_EditFamily.py: catch signals to update window
	* src/plugins/EventCmp.py: (#886) properly handle CANCEL on save dialog
	* src/ReportBase/_ReportDialog.py: error reporting
	* src/plugins/NarrativeWeb.py: error reporting

2007-01-30  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/RemoveUnused.py: Rewrite to offer object list
	proposed for removal.
	* src/DisplayTabs/_BackRefList.py (edit_button_clicked): Change
	argument order in EditEvent call.
	* src/DataViews/_EventView.py: Change argument order in EditEvent call.