@@ -47,6 +47,14 @@
 	* src/GrampsLocale.py: refactor GrampsDb and clean RelLib deps
 	* src/DbLoader.py: refactor GrampsDb and clean RelLib deps
 	
+2007-02-03  Don Allingham  <don@gramps-project.org>
+	* src/Editors/_EditFamily.py (EditFamily.check_for_family_change): fix
+	warning message.
+
+2007-02-02  Don Allingham  <don@gramps-project.org>
+	* src/Editors/_EditFamily.py (EditFamily.check_for_family_change): update on data change
+	from family-update signal
+
 2007-02-02  Alex Roitman  <shura@gramps-project.org>
 	* src/plugins/WriteCD.py: Properly encode URI.
 
